docs: translate all JavaDocs in API module * refactor: Enchantment compatibilities & add rarity * fix: Enchantments rarity * refactor: Do not use short on enchantments * refactor: API module