@@ -1,6 +1,7 @@
 package org.allaymc.api.item.recipe;
 
 import lombok.Builder;
+import lombok.Getter;
 import org.allaymc.api.item.ItemStack;
 import org.allaymc.api.item.descriptor.ItemDescriptor;
 import org.allaymc.api.item.recipe.input.CraftingInput;
@@ -11,10 +12,7 @@ import org.cloudburstmc.protocol.bedrock.data.inventory.crafting.recipe.RecipeDa
 import org.cloudburstmc.protocol.bedrock.data.inventory.crafting.recipe.ShapedRecipeData;
 import org.cloudburstmc.protocol.bedrock.data.inventory.descriptor.ItemDescriptorWithCount;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.util.*;
 
 import static org.allaymc.api.item.type.ItemTypes.AIR_TYPE;
 
@@ -23,10 +21,13 @@ import static org.allaymc.api.item.type.ItemTypes.AIR_TYPE;
  *
  * @author daoge_cmd
  */
+@Getter
 public class ShapedRecipe extends CraftingRecipe {
 
     public static final char EMPTY_KEY_CHAR = ' ';
+
     protected static final ItemStack[][] EMPTY_ITEM_STACK_ARRAY = new ItemStack[0][0];
+
     protected char[][] pattern;
     protected Map<Character, ItemDescriptor> keys;
 
@@ -69,22 +70,13 @@ public class ShapedRecipe extends CraftingRecipe {
 
     @Override
     public boolean match(Input input) {
-        ItemStack[][] inputs;
-        if (input instanceof CraftingInput craftingInput) {
-            inputs = removeUselessRowAndColumn(craftingInput.getItems());
-        } else return false;
+        if (!(input instanceof CraftingInput craftingInput)) return false;
 
-        // Check size
-        if (inputs.length == 0) {
-            // Empty input not allowed
-            return false;
-        }
-        if (inputs.length > pattern.length) {
-            return false;
-        }
-        if (inputs[0].length > pattern[0].length) {
-            return false;
-        }
+        var inputs = removeUselessRowAndColumn(craftingInput.getItems());
+        // Empty input not allowed
+        if (inputs.length == 0) return false;
+        if (inputs.length > pattern.length) return false;
+        if (inputs[0].length > pattern[0].length) return false;
 
         for (int i = 0, patternLength = pattern.length; i < patternLength; i++) {
             var row = pattern[i];
@@ -92,14 +84,10 @@ public class ShapedRecipe extends CraftingRecipe {
                 var key = row[j];
                 var item = inputs[i][j];
                 if (key == EMPTY_KEY_CHAR) {
-                    if (!item.getItemType().equals(AIR_TYPE)) {
-                        return false;
-                    }
+                    if (!item.getItemType().equals(AIR_TYPE)) return false;
                 } else {
                     var descriptor = keys.get(key);
-                    if (!descriptor.match(item)) {
-                        return false;
-                    }
+                    if (!descriptor.match(item)) return false;
                 }
             }
         }
@@ -107,39 +95,57 @@ public class ShapedRecipe extends CraftingRecipe {
         return true;
     }
 
+    // @formatter:off
     /**
      * Remove useless row and column
      *
-     * @param inputs [o, o, x]    [x, o, o]
+     * @param inputs <pre>
+     *               {@code
+     *               [o, o, x]    [x, o, o]
      *               [o, o, x] or [x, o, o] or etc...
      *               [x, x, x]    [x, x, x]
+     *               }
+     *               </pre>
      *
-     * @return [o, o]
-     * [o, o]
+     * @return <pre>
+     *     {@code
+     *     [o, o]
+     *     [o, o]
+     *     }
+     * </pre>
      */
+    // @formatter:on
     protected ItemStack[][] removeUselessRowAndColumn(ItemStack[][] inputs) {
-        int startRow = 0, endRow = inputs.length - 1;
+        int
+                startRow = 0,
+                endRow = inputs.length - 1;
         for (int row = 0; row < inputs.length; row++) {
             if (notAllEmptyRow(inputs[row])) {
                 startRow = row;
                 break;
             }
-            // 发现全部都是空气，直接返回空数组
+
+            // If all are air, return empty array directly
             if (row == inputs.length - 1) return EMPTY_ITEM_STACK_ARRAY;
         }
+
         for (int row = inputs.length - 1; row >= 0; row--) {
             if (notAllEmptyRow(inputs[row])) {
                 endRow = row;
                 break;
             }
         }
-        int startColumn = 0, endColumn = inputs[0].length - 1;
+
+        int
+                startColumn = 0,
+                endColumn = inputs[0].length - 1;
         for (int column = 0; column < inputs[0].length; column++) {
             if (notAllEmptyColumn(inputs, column)) {
                 startColumn = column;
                 break;
             }
         }
+
         for (int column = inputs[0].length - 1; column >= 0; column--) {
             if (notAllEmptyColumn(inputs, column)) {
                 endColumn = column;
@@ -147,11 +153,11 @@ public class ShapedRecipe extends CraftingRecipe {
             }
         }
 
-        if (startRow == 0 && endRow == inputs.length - 1 && startColumn == 0 && endColumn == inputs[0].length - 1) {
-            return inputs;
-        }
+        if (startRow == 0 && endRow == inputs.length - 1 &&
+            startColumn == 0 && endColumn == inputs[0].length - 1
+        ) return inputs;
 
-        ItemStack[][] result = new ItemStack[endRow - startRow + 1][endColumn - startColumn + 1];
+        var result = new ItemStack[endRow - startRow + 1][endColumn - startColumn + 1];
         for (int row = startRow; row <= endRow; row++) {
             if (endColumn + 1 - startColumn >= 0)
                 System.arraycopy(inputs[row], startColumn, result[row - startRow], 0, endColumn + 1 - startColumn);
@@ -161,35 +167,19 @@ public class ShapedRecipe extends CraftingRecipe {
     }
 
     protected boolean notAllEmptyRow(ItemStack[] inputs) {
-        for (var item : inputs) {
-            if (item.getItemType() != AIR_TYPE) {
-                return true;
-            }
-        }
-        return false;
+        return Arrays.stream(inputs).anyMatch(item -> item.getItemType() != AIR_TYPE);
     }
 
     protected boolean notAllEmptyColumn(ItemStack[][] inputs, int column) {
-        for (var row : inputs) {
-            if (row[column].getItemType() != AIR_TYPE) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    public char[][] getPattern() {
-        return pattern;
-    }
-
-    public Map<Character, ItemDescriptor> getKeys() {
-        return keys;
+        return Arrays.stream(inputs).anyMatch(row -> row[column].getItemType() != AIR_TYPE);
     }
 
     public interface PatternHelper {
-        static char[][] build(char a, char b, char c,
-                              char d, char e, char f,
-                              char g, char h, char i) {
+        static char[][] build(
+                char a, char b, char c,
+                char d, char e, char f,
+                char g, char h, char i
+        ) {
             return new char[][]{
                     {a, b, c},
                     {d, e, f},
@@ -197,8 +187,10 @@ public class ShapedRecipe extends CraftingRecipe {
             };
         }
 
-        static char[][] build(char a, char b,
-                              char c, char d) {
+        static char[][] build(
+                char a, char b,
+                char c, char d
+        ) {
             return new char[][]{
                     {a, b},
                     {c, d}
@@ -206,9 +198,7 @@ public class ShapedRecipe extends CraftingRecipe {
         }
 
         static char[][] build(char a) {
-            return new char[][]{
-                    {a}
-            };
+            return new char[][]{{a}};
         }
 
         static char[][] build(String l1, String l2, String l3) {
@@ -227,15 +217,17 @@ public class ShapedRecipe extends CraftingRecipe {
         }
 
         static char[][] build(List<String> stringList) {
-            var commonLength = stringList.get(0).length();
-            char[][] pattern = new char[stringList.size()][commonLength];
+            var commonLength = stringList.getFirst().length();
+            var pattern = new char[stringList.size()][commonLength];
             for (int row = 0; row < stringList.size(); row++) {
                 var line = stringList.get(row);
                 if (line.length() != commonLength)
                     throw new IllegalArgumentException("All row in pattern must have the same length");
+
                 var charArray = line.toCharArray();
                 System.arraycopy(charArray, 0, pattern[row], 0, charArray.length);
             }
+
             return pattern;
         }
     }
